<resources>
    <string name="app_name">Todo</string>

    <!-- Preview -->
    <string name="dummy">Dummy</string>

    <!-- Main Activity -->
    <string name="add_title">Add New</string>
    <string name="add_type_title">Type new title</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="category_all">All</string>
    <string name="category_manage">Manage Category</string>
    <string name="menu_app">Application</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Information</string>

    <!-- Category Fragment -->
    <string name="cat_fragment_title">Category</string>
    <string name="cat_fragment_complete">Complete %1$d%%</string>
    <string name="cat_fragment_add">New Category</string>

    <!-- Dialog -->
    <string name="dialog_desc">Description</string>
    <string name="dialog_ok">Done</string>

    <!-- Modify Activity -->
    <string name="title_activity_modify">Modify</string>
    <string name="action_settings">Settings</string>
    <string name="edit_title">Title</string>
    <string name="edit_info">Info</string>

    <string name="btn_ok">OK</string>
    <string name="btn_del">Delete</string>

</resources>
