<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_category"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/cat_manage"
        android:orderInCategory="400"
        android:title="@string/category_manage"/>
    <item
        android:id="@+id/menu_app"
        android:orderInCategory="401"
        android:title="@string/menu_app">
        <menu>

            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/menu_info"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_info" />
        </menu>
    </item>
</menu>